# Enjolras

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  doxygen.cfg  enjolras.kdev4
include/: enjolras-cfg.hpp  enjolras.hpp
include/Eigen/: Eigen.hpp
include/utils/: cmdl-args.hpp  file-checker.hpp
src/: enjolras-cfg.hpp.in  enjolras.cpp  main.cpp
src/utils/: cmdl-args.cpp  file-checker.cpp
test/: test-cmdl-args.hpp  test-eigen.hpp  test-enjolras.cpp  test-file-checker.hpp  test-yaml-cpp.hpp
